<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/paper"
    android:padding="@dimen/gutter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/ink"
            android:textSize="20sp"
            android:letterSpacing="0.1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lock_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/lock_verify_title"
            android:textColor="@color/ink"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/lock_msg"
            style="@style/Text.Muted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/lock_setup_msg" />

        <EditText
            android:id="@+id/lock_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/passcode_hint"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:singleLine="true" />

        <TextView
            android:id="@+id/lock_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/ink_soft"
            android:textSize="12sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/lock_confirm"
            style="@style/Widget.MATOlog.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="20dp"
            android:text="@string/action_ok" />

        <Button
            android:id="@+id/lock_skip"
            style="@style/Widget.MATOlog.Button"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="10dp"
            android:text="@string/lock_skip" />
    </LinearLayout>

</LinearLayout>
